--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,5 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_detail"
     tools:context="es.davidpena.sunshine.DetailActivityFragment">
 
+    <TextView
+        android:id="@+id/detail_text"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 </RelativeLayout>
